--- a/INSTALL
+++ b/INSTALL
@@ -2,12 +2,10 @@
                            ----------------
 
 SoX should compile and run on any POSIX compatible system (Linux, BSD,
-Solaris, Xcode on Mac OS X, Cygwin on MS-Windows, etc.).  Some
-non-POSIX compilers (such as MSVC) are supported via the `CMake' build
-utility.  For other compilers/systems, it is often possible to
-manually construct a custom `soxconfig.h' and `Makefile' for that
-system (the minimum requirements are 32-bit CPU, 64-bit FPU, C89
-compiler).
+Solaris, Xcode on Mac OS X, Cygwin on MS-Windows, etc.).  For other
+compilers/systems, it is often possible to manually construct a custom
+`soxconfig.h' and `Makefile' for that system (the minimum requirements
+are 32-bit CPU, 64-bit FPU, C89 compiler).
 
 Note that the `play', `rec', and `soxi' programs are in fact just
 copies-of or links-to (depending on OS) `sox'.
@@ -214,16 +212,7 @@ To compile a full-featured build of SoX with Visual Studio 2008 (msvc9),
 Visual Studio 2010 (msvc10), or the Windows SDK 7.1, you may be able to use the
 preconfigured solution found in the sox\msvc9 (VS2008) or sox\msvc10 (VS2010 or
 Windows SDK 7.1) folder. See sox\msvc9\readme.txt or sox\msvc10\readme.txt for
-details on building using the corresponding Microsoft C compiler. If the
-preconfigured solution doesn't work for you, build with CMake as follows:
-
-o Install cmake (http://www.cmake.org/HTML/Download.html)
-o Install any optional libraries to use with SoX
-o Unpack the SoX sources (...tar.gz) to say c:\sox
-o Type cd c:\sox
-o Type cmake -G "compiler" .   (type cmake --help for list of compilers)
-
-This should generate project build files for use with Visual C.
+details on building using the corresponding Microsoft C compiler.
 
 
 
@@ -245,9 +234,6 @@ The following requirements have been tested. Nevertheless, other
 versions may work as well.
 
 o Microsoft Windows (Win32, Win2000, XP, Win2003, Vista, etc.).
-
-o CMake (Cross Platform Make) version 2.4
-  available on [http://www.cmake.org]
 
 o Microsoft Visual Stuio 2008 (earlier versions should also work).
 
@@ -302,31 +288,6 @@ o Open Visual Studio and add in "Tools -> Options -> Projects and Solutions ->
   (...\[somewhere]\lameforsox).  Add in the "Library files" collection the
   folder containing mad.lib and the folder containing the lame libraries
   mp3lame.lib and mpglib.lib (...\[somewhere]\lameforsox).
-
-o Edit the CMakeLists.txt in the SoX top directory:
-  Add
-  set(CMAKE_REQUIRED_LIBRARIES ${CMAKE_REQUIRED_LIBRARIES} mpglib)
-  after some blank lines beneath the statement
-  if(NEED_LIBM)
-  set(CMAKE_REQUIRED_LIBRARIES ${CMAKE_REQUIRED_LIBRARIES} -lm)
-  endif(NEED_LIBM)
-
-o Open the windows command line console and change into the SoX top directory.
-
-o Execute cmake like this:
-  cmake.exe ./ -G "Visual Studio 9 2008"
-
-o If the Visual Studio settings are done as described above the following cmake
-  output should appear:
-  ...
-  include files HAVE_MAD_H1 - found
-  mad_stream_buffer in madmad_stream_buffer in mad - found
-  ...
-  include files HAVE_LAME_LAME_H1 - found
-  lame_init in mp3lamelame_init in mp3lame - found
-  ...
-
-o If not check CMakeFiles\CMakeError.log.
 
 o Open Visual Studio and open the SoX solution file in the SoX top directory
   (sox.sln).
